--- a/WeatherPy_VacationPy/WeatherPy.ipynb
+++ b/WeatherPy_VacationPy/WeatherPy.ipynb
@@ -1931,7 +1931,9 @@
    "metadata": {},
    "source": [
     "**Discussion about the linear relationship:**\n",
-    "In the northern hemisphere, there is a very strong correlation (r = 0.86) between latitude and max temperature.  In the southern hemisphere, there is a moderate correlation (r = 0.53) between latitude and max temperature.  In both hemispheres, the max temperature increases as you approach the equator (latitude = 0).  "
+    "    In the northern hemisphere, there is a very strong negative correlation (r = -0.84) between latitude and max temperature.  In the southern hemisphere, there is a moderate correlation (r = 0.53) between latitude and max temperature.  In both hemispheres, the max temperature increases as you approach the equator (latitude = 0). \n",
+    "         \n",
+    "    The northern latitude appears to have a greater temperature difference (-33C to 33C) than the southern latitude (9C to 33C), but the city locations in the northern latitudes also span a much greater range of latitudes (lat 0 to 77) than the cities in the southern latitudes (lat 0 to -55). Additional data and/or analysis would be required to evaluate differences between the two hemispheres.  "
    ]
   },
   {
@@ -2032,7 +2034,7 @@
    "metadata": {},
    "source": [
     "**Discussion about the linear relationship:** \n",
-    "In the northern and southern hemispheres, there is a very weak to weak correlation (r = 0.24, r = 0.32) between latitude and humidity. Humidity varies widely across latitudes in both hemispheres, from 13% to 100%."
+    "    In the northern hemisphere, there is a very weak to weak correlation (r = 0.24) between latitude and humidity. In the southern hemisphere, there is a weak correlation (r =0.32) between latitude and humidity.  Humidity varies widely across latitudes in both hemispheres, from 13 to 100%."
    ]
   },
   {
