--- a/WeatherPy_VacationPy/VacationPy.ipynb
+++ b/WeatherPy_VacationPy/VacationPy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "4        1.77      PG  1667771567  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "[561 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b6fa39d824f4549a211f466a1819ebb",
+       "model_id": "46df6b59c1c54a349eae8a019227a2a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "519           5        2.96      MX  1667771745             6  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "519           5        2.96      MX  1667771745             6       <NA>  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
        "519           5        2.96      MX  1667771745             6  Hotel del Real  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
        "      <th>Date</th>\n",
        "      <th>sqrtHumidity</th>\n",
        "      <th>Hotel Name</th>\n",
-       "      <th>City &amp; Hotel</th>\n",
+       "      <th>Country &amp; Hotel</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1278,7 +1278,7 @@
        "      <td>1667771644</td>\n",
        "      <td>6</td>\n",
        "      <td>La Cabaña</td>\n",
-       "      <td>City: molina   Hotel: La Cabaña</td>\n",
+       "      <td>Country: CL   Hotel: La Cabaña</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>286</th>\n",
@@ -1294,7 +1294,7 @@
        "      <td>1667771663</td>\n",
        "      <td>7</td>\n",
        "      <td>No hotel found</td>\n",
-       "      <td>City: pajan   Hotel: No hotel found</td>\n",
+       "      <td>Country: EC   Hotel: No hotel found</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>294</th>\n",
@@ -1310,7 +1310,7 @@
        "      <td>1667771667</td>\n",
        "      <td>6</td>\n",
        "      <td>Hotel kayaby</td>\n",
-       "      <td>City: diamantino   Hotel: Hotel kayaby</td>\n",
+       "      <td>Country: BR   Hotel: Hotel kayaby</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>330</th>\n",
@@ -1326,7 +1326,7 @@
        "      <td>1667771679</td>\n",
        "      <td>5</td>\n",
        "      <td>No hotel found</td>\n",
-       "      <td>City: nativitas   Hotel: No hotel found</td>\n",
+       "      <td>Country: MX   Hotel: No hotel found</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>362</th>\n",
@@ -1342,7 +1342,7 @@
        "      <td>1667771688</td>\n",
        "      <td>6</td>\n",
        "      <td>Alcoboca</td>\n",
-       "      <td>City: santa luzia   Hotel: Alcoboca</td>\n",
+       "      <td>Country: BR   Hotel: Alcoboca</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>415</th>\n",
@@ -1358,7 +1358,7 @@
        "      <td>1667771706</td>\n",
        "      <td>6</td>\n",
        "      <td>فندق المدينه</td>\n",
-       "      <td>City: odweyne   Hotel: فندق المدينه</td>\n",
+       "      <td>Country: SO   Hotel: فندق المدينه</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>462</th>\n",
@@ -1374,7 +1374,7 @@
        "      <td>1667771725</td>\n",
        "      <td>6</td>\n",
        "      <td>Aquarius</td>\n",
-       "      <td>City: ariquemes   Hotel: Aquarius</td>\n",
+       "      <td>Country: BR   Hotel: Aquarius</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>519</th>\n",
@@ -1390,7 +1390,7 @@
        "      <td>1667771745</td>\n",
        "      <td>6</td>\n",
        "      <td>Hotel del Real</td>\n",
-       "      <td>City: santa rosalia   Hotel: Hotel del Real</td>\n",
+       "      <td>Country: MX   Hotel: Hotel del Real</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1417,25 +1417,25 @@
        "462          19        0.73      BR  1667771725             6        Aquarius   \n",
        "519           5        2.96      MX  1667771745             6  Hotel del Real   \n",
        "\n",
-       "                                    City & Hotel  \n",
-       "231              City: molina   Hotel: La Cabaña  \n",
-       "286          City: pajan   Hotel: No hotel found  \n",
-       "294       City: diamantino   Hotel: Hotel kayaby  \n",
-       "330      City: nativitas   Hotel: No hotel found  \n",
-       "362          City: santa luzia   Hotel: Alcoboca  \n",
-       "415          City: odweyne   Hotel: فندق المدينه  \n",
-       "462            City: ariquemes   Hotel: Aquarius  \n",
-       "519  City: santa rosalia   Hotel: Hotel del Real  "
+       "                         Country & Hotel  \n",
+       "231       Country: CL   Hotel: La Cabaña  \n",
+       "286  Country: EC   Hotel: No hotel found  \n",
+       "294    Country: BR   Hotel: Hotel kayaby  \n",
+       "330  Country: MX   Hotel: No hotel found  \n",
+       "362        Country: BR   Hotel: Alcoboca  \n",
+       "415    Country: SO   Hotel: فندق المدينه  \n",
+       "462        Country: BR   Hotel: Aquarius  \n",
+       "519  Country: MX   Hotel: Hotel del Real  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# #add hover information to dataframe\n",
-    "hotel_df['City & Hotel'] = 'City: ' + hotel_df['City'] + '   Hotel: ' +hotel_df['Hotel Name']\n",
+    "hotel_df['Country & Hotel'] = 'Country: ' + hotel_df['Country'] + '   Hotel: ' +hotel_df['Hotel Name']\n",
     "hotel_df\n"
    ]
   },
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70f6830de8cd412aba817e41cc364c23",
+       "model_id": "9fe11f035cd54836997e4c4c77fb63f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1484,7 +1484,7 @@
     "# nice reference for maps  https://jupyter-gmaps.readthedocs.io/en/latest/api.html\n",
     "symbol_locations_hotel = hotel_df[['Lat','Lng']]\n",
     "\n",
-    "symbol_hover_hotel = (hotel_df['City & Hotel']).astype('str')\n",
+    "symbol_hover_hotel = (hotel_df['Country & Hotel']).astype('str')\n",
     "shover_hotel = symbol_hover_hotel.tolist()\n",
     "\n",
     "\n",
